# can-we-update-mc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  deploy  deploy.sh  docker-compose.yml  fly.toml  main.py  mods.txt.example  pyproject.toml  render.yaml
bot/: commands.py  config.py  main.py  modrinth.py
tests/: test_checklatest.py  test_modrinth.py
